<resources>
    <string name="app_name">kts-android-09-2021</string>
    <string name="firstOnboardingScreenText">To the library of over 2 million free high-resolution photos</string>
    <string name="welcomeText">Welcome to Unsplash</string>
    <string name="skipText">Skip</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passMinLength">Minimum password length is 8</string>
    <string name="incorrectEmail">Incorrect email address</string>
    <string name="loginBtn">Login</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="next">next</string>
    <string name="loading_error">Ошибка загрузки</string>
    <string name="network_error">Ошибка загрузки, проверьте настройки сети</string>
    <string name="token_error">Ошибка получения токена</string>
</resources>