<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.onBoarding.FirstScreenFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/skipText"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appIconIv"
        android:layout_width="150dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toTopOf="@+id/welcomeTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:scaleType="centerCrop"
        android:src="@drawable/unsplash_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcomeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeText"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/welcomeTvs"
        app:layout_constraintEnd_toEndOf="@+id/appIconIv"
        app:layout_constraintStart_toStartOf="@+id/appIconIv"
        app:layout_constraintTop_toBottomOf="@+id/appIconIv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcomeTvs"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/firstOnboardingScreenText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcomeTv"
        app:layout_constraintStart_toStartOf="@+id/welcomeTv"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTv" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTvs" />
</androidx.constraintlayout.widget.ConstraintLayout>